# skopos

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Dockerfile  README.md  SECURITY.md  agent.example.yaml  api_server.py  dashboard.py  docker-compose.postgres.yml  docker-compose.yml  docker-entrypoint.sh  healthz_server.py  pyproject.toml  requirements-postgres.txt  requirements.txt  servers.example.yaml  skoposctl.py
.streamlit/: config.toml
docs/: audit-findings.md  quickstart.md  security.md  use-cases.md  user-guide.md
locales/: en.yaml  es.yaml  fr.yaml  ru.yaml  zh.yaml
pages/: 0_Quick_Start.py  1_Security.py  2_Settings.py  3_Scan_History.py  4_Documentation.py  5_Fleet.py
scripts/: capture_doc_screenshots.py  capture_readme_screenshots.py  check_agent_fab_prod.py  ci_coverage_badge.sh  ci_static_badge.sh  generate_coverage_badge.py  generate_static_badge.py  generate_tests_badge.py  install_geolite2_country.sh  install_iptoasn.sh
skopos/: __init__.py  agent_portal.py  agent_token.py  agent_widget.py  analytics_filters.py  analytics_queries.py  apache.py  apache_logs.py  app_auth.py  app_shell.py  asn_db.py  auth_store.py  backfill.py  brand.py  charts.py  collector.py  config.py  config_io.py  config_paths.py  countries.py  db.py  db_connection.py  db_dialect.py  db_migrate.py  db_settings.py  doc_i18n.py  docs_i18n_render.py  docs_i18n_translations.py  docs_i18n_translations_rest.py  docs_i18n_ui.py  docs_viewer.py  ecosystem.py  enrich.py  env.py  env_io.py  geo_centroids.py  geo_earth.py  geoip.py  host_infer.py  i18n.py  (+31 more)
(+200 files in other folders)
