[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skopos-fleet"
version = "0.1.1"
description = "SKOPOS (Σκοπός) — self-hosted nginx analytics and fleet security for the AICOM ecosystem."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AICOM (alexar76)" }]
keywords = ["nginx", "analytics", "security", "streamlit", "aimarket", "aicom", "fleet", "ssh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.33",
    "pandas>=2.0",
    "plotly>=5.18",
    "pyyaml>=6.0",
    "paramiko>=3.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "geoip2>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
postgres = ["psycopg[binary]>=3.2"]

[project.scripts]
skoposctl = "skoposctl:main"

[tool.setuptools]
py-modules = ["skoposctl"]

[tool.setuptools.packages.find]
where = ["."]
include = ["skopos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
